# ROS2-Kuka-Kr210

./: README.md
kr210_moveit/: .setup_assistant  CMakeLists.txt
kr210_moveit/config/: joint_limits.yaml  kuka_kr210_arm.ros2_control.xacro  kuka_kr210_arm.srdf  moveit_controllers.yaml  ros2_controllers.yaml
kr210_moveit/launch/: mg.launch.py  move_group.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
kr210_moveit/msg/: Kr210MoveitJoints.msg  Kr210Trajectory.msg
kr210_moveit/src/: mover_server.cpp  mover_server_new.cpp  new.cpp  old_high.cpp
kuka_kr210_export/: kr210.urdf
src/kr210_moveit/: CMakeLists.txt  package.xml
src/kr210_moveit/config/: moveit_controllers.yaml
src/kr210_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
src/kr210_moveit/src/: mover_server_low.cpp  trj_planner.cpp
src/kr210_moveit/srv/: MoverService.srv
src/kuka_kr210_arm/: setup.cfg  setup.py
src/kuka_kr210_arm/launch/: controller.launch.py  gazebo.launch.py
